Fix layout collapse bug

--- a/app/assets/styles/components/_header.scss
+++ b/app/assets/styles/components/_header.scss
@@ -1,5 +1,6 @@
 .header {
   position: absolute;
+  min-width: 37rem;
   bottom: 1rem;
   left: 1rem;
   z-index: 2;
